kubernetes/gwsetup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gwsetup
  namespace: geneweb
  labels:
    app: gwsetup
spec:
  ports:
  - port: 2316
    targetPort: 2316
    protocol: TCP
    name: p2316
  selector:
    app: gwsetup
  externalIPs: [ FILL THIS IN ] # Sample value: "192.168.1.123"
