kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geneweb
  namespace: geneweb
  labels:
    app: geneweb
spec:
  ports:
  - port: 2317
    targetPort: 2317
    protocol: TCP
    name: p2317
  selector:
    app: geneweb
  # This is the local IP of vm0  
  externalIPs: [ FILL THIS IN ] # Sample value: "192.168.1.123"
